--- a/01-starting-project/index.html
+++ b/01-starting-project/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Essentials</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body>    
+    <div id="root">
+      <!-- this is the entry point at which all components are injected into -->
+    </div>
     <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
